--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^11.1.0",
     "fs": "^0.0.1-security",
-    "inquirer": "^9.2.11"
+    "inquirer": "^9.2.11",
+    "util": "^0.12.5"
   }
 }
