WIP Postinstall script
Writing to file with directory found via __dirname successful.

Still needs proper formatting and testing.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@ashthomascode/hal",
-  "version": "2.1.7",
+  "version": "2.2.8",
   "description": "CLI for reuseable components",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "test",
     "hal": "node src/index.js",
-    "dir": "node src/dir.mjs",
-    "postinstall": "node src/post.cjs --foreground-scripts"
+    "postinstall": "node postInstall.cjs"
   },
   "bin": {
     "hal": "index.js"
